# HW_PDNode-600-Pro

./: .gitignore  .gitmodules  README.md
.github/: FUNDING.yml
docs/Datasheets/: MPQ4242GVE-AEC1.txt  PAC1710-PAC1720-DataSheet.txt
docs/playground/: index.html
images/: Enclosure.3mf  Top Lid.3mf
src/HardwareDesign/: PDNode-600 Pro.sch
src/HardwareDesign/0.1.0/: PDNode-600 Pro.brd  PDNode-600 Pro.sch  PDNode-600 Pro1.brd  PDNode-600 Pro1.sch  PDNode_Devboard_v0.0.1.brd  PDNode_Devboard_v0.0.1.sch
src/HardwareDesign/Rev0.1.0/: PDNode-600 Pro.brd  PDNode-600 Pro.sch
src/Software/: .clang-format  CMakeLists.txt  CONFIG.h  FreeRTOSConfig.h  PDNode_RTOS.c  tusb_config.h  usb_descriptors.c
src/Software/drivers/: CAT24C256_driver.c  CAT24C256_driver.h  MCP23017_driver.c  MCP23017_driver.h  PAC1720_driver.c  PAC1720_driver.h  TCA9548_driver.c  TCA9548_driver.h  ethernet_config.h  ethernet_driver.c  ethernet_driver.h  ethernet_w5500regs.h  i2c_bus.c  snmp.c  snmp.h  snmp_table.c  socket.c  socket.h
src/Software/eeprom/: eeprom_io.c  eeprom_io.h  eeprom_memory_map.h
src/Software/html/: index.html
src/Software/sample/: CONFIG.h  ENERGIS_RTOS.c  ERROR_CODE.h  FreeRTOSConfig.h  wrap_watchdog.c
src/Software/tasks/: ConsoleTask.c  ConsoleTask.h  HealthTask.c  HealthTask.h  HeartbeatTask.c  HeartbeatTask.h  InitTask.c  InitTask.h  LoggerTask.c  LoggerTask.h  NetTask.c  NetTask.h  PDCardTask.c  PDCardTask.h  StorageTask.c  StorageTask.h  (+2 more)
src/Software/usb_freertos_test/: CMakeLists.txt  FreeRTOSConfig.h  main.c  tusb_config.h  usb_descriptors.c  usb_test.c
(+381 files in other folders)
